--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 
     // JUnit 5 for testing
     implementation 'org.junit.jupiter:junit-jupiter:5.7.2'
+    implementation 'org.projectlombok:lombok:1.18.26'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testImplementation 'org.mockito:mockito-junit-jupiter:3.10.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
